-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.6
-
6c47834483 (qt-extensions/qttreeview/master)
When using DelegateChooser with a TreeView and then doing a sort on the model in a TreeView, the items are not correctly updated to reflect the chooser.
In the example, double click to expand the item and then click on Toggle Sort. If this the item is double-clicked twice again you can see that it is shown correctly.
- duplicates
-
QTBUG-75887 The delegate object in the Listview for DelegateModel with DelegateChoice is not being updated on role value change in the model
-
- Closed
-
-
QTBUG-84093 DelegateChooser doesn't update when DelegateChoice criteria are modified
-
- Closed
-
- is required for
-
QTBUG-98101 DelegateChooser / DelegateChoice: graduate from Qt.labs
-
- Closed
-
| For Gerrit Dashboard: QTBUG-97579 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 386955,2 | Ensure we emit layoutChanged when layout changes | master | qt-extensions/qttreeview | Status: MERGED | +2 | 0 |
| 387061,2 | QQmlTreeModelToTableModel: emit layoutChanged() when the layout changes | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 387176,2 | QQmlTreeModelToTableModel: emit layoutChanged() when the layout changes | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |