QQmlTreeModelToTableModel: emit layoutChanged() when the layout changes

When the source model changes layout, the proxy model
will change layout as well. Hence, we also need to
emit that the layout for the proxy model has changed
so that TableView will do a relayout.

Task-number: QTBUG-97579
Change-Id: Id8ffde594086afafadb6d4d3a9b10fd821cb691e
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit b215ab845fa932048b59fcb876157fd7cd91403a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>